2015-07-10  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_inventories.php
	  operation/companies/company_detail.php: Improved
	import objects from CSV.


2015-07-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/integria_cron.php: Fixed bug
	loading inventory from pandora.

	* operation/manufacturers/manufacturer_detail.php:
	Add column ID to list.

	* include/styles/integria.css: Improve style.

	* include/languages/index.pot: Updated translations.

2015-07-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/zh_CN.mo
	  include/languages/zh_CN.po
	  include/languages/zh_TN.mo
	  include/languages/zh_TN.po
	  include/languages/index.pot: Updated translations.

	* operation/inventories/inventory_detail.php: Delete
	inventory objects associated.

2015-07-07  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/js/integria_incident_search.js: Fixed
	bug loading object type fields.

2015-07-06  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_incidents.php
	  operation/companies/company_detail.php: Improved 
	ticket statistics.

2015-07-06  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/integria_cron.php: Fixed bug
	creating inventory from pandora agents.

2015-07-03  Vanessa Gil <vanessa.gil@artica.es> 
	
	* operation/projects/people_manager.php: Resized
	combo.

	* operation/incidents/incident_detail.php: Fixed
	bug updating tickets.

2015-07-01  Vanessa Gil <vanessa.gil@artica.es> 
	
	* include/functions_incidents.php
	  operation/incidents/incident_detail.php: Fixed
	bug in counting tickets.

2015-07-01  Vanessa Gil <vanessa.gil@artica.es> 
	